// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/SummaryItem default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={
      Object {
        "baseline": 100000,
        "current": 120000,
      }
    }
    id="webpack.totalSizeByTypeALL"
    loading={false}
    showBaselineValue={false}
    showDelta={true}
    showMetricDescription={false}
    size="medium"
  />
</div>
`;

exports[`Storyshots Components/SummaryItem loading 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={null}
    id="webpack.totalSizeByTypeALL"
    loading={true}
    showBaselineValue={false}
    showDelta={true}
    showMetricDescription={false}
    size="medium"
  />
</div>
`;

exports[`Storyshots Components/SummaryItem showBaseline value true 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={
      Object {
        "baseline": 102000,
        "current": 120000,
      }
    }
    id="webpack.totalSizeByTypeALL"
    loading={false}
    showBaselineValue={true}
    showDelta={true}
    showMetricDescription={false}
    size="medium"
  />
</div>
`;

exports[`Storyshots Components/SummaryItem showDelta false 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={
      Object {
        "baseline": 0,
        "current": 120000,
      }
    }
    id="webpack.totalSizeByTypeALL"
    loading={false}
    showBaselineValue={false}
    showDelta={false}
    showMetricDescription={false}
    size="medium"
  />
</div>
`;

exports[`Storyshots Components/SummaryItem showMetricDescription 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={
      Object {
        "baseline": 100000,
        "current": 120000,
      }
    }
    id="webpack.totalSizeByTypeALL"
    loading={false}
    showBaselineValue={false}
    showDelta={true}
    showMetricDescription={true}
    size="medium"
  />
</div>
`;

exports[`Storyshots Components/SummaryItem size large 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "maxWidth": "320px",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <SummaryItem
    className=""
    data={
      Object {
        "baseline": 100000,
        "current": 120000,
      }
    }
    id="webpack.totalSizeByTypeALL"
    loading={false}
    showBaselineValue={false}
    showDelta={true}
    showMetricDescription={false}
    size="large"
  />
</div>
`;
